--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -49,10 +49,14 @@ nav ul li a {
     font-size: 50px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 900;
-    text-shadow: 2px 2px;
+    text-shadow: 2px 2px 20px;
 }
 
-
+.avatar {
+    margin-left: 300px;
+    margin-top: 150px;
+    box-shadow: 3px 7px 10px 5px;
+}
 
 
 
