--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -14,6 +14,12 @@ display: flex;
 align-items: center;
 justify-content: space-between;
 }
+
+nav, .nav-bar, .title, .text-right, a, li {
+    background-color: black;
+    margin-bottom: 5px;
+}
+
 .text-right {
 list-style: none;
 margin-right: 20px;
