--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,22 +1,31 @@
 * {
 background-color: white;
-color: #8AAAE5;
-font-family: sans-serif;
+color: black;
+background-color: #FFCCCB;
+font-family: sans-serif; 
 }
+
 
 h1 {
     font-size: 40px;
     font-weight: 900;
+}
+.navflex {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 nav {
 display: flex;
 align-items: center;
 justify-content: space-between;
+border: 3px black solid;
+box-shadow: black 2px 2px 20px;
 }
 
+
 nav, .nav-bar, .title, .text-right, a, li {
-    background-color: black;
+    background-color: #FF8BA0;
     margin-bottom: 5px;
 }
 
@@ -31,15 +40,15 @@ grid-template-columns: 1fr 1fr 1fr;
 }
 .text-right a {
     float: left;
-    color: grey;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
 }
 .text-right a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: palevioletred;
+    color: white;
 }
 
 
@@ -55,20 +64,80 @@ nav ul li a {
     font-size: 50px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 900;
-    text-shadow: 2px 2px 20px;
+    text-shadow: 2px 2px 2px;
 }
 
 .avatar {
-    margin-left: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: 70px;
+    margin-right: 30px;
+    margin-left: 40px;
     margin-top: 150px;
-    box-shadow: 3px 7px 10px 5px;
+    margin-bottom: 100px;
+    box-shadow: 2px 2px 3px 2px;
+    color: black;
+    background-color: white;
+}
+
+.grid-container {
+    max-width: 1300px;
+    height: 950px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 2fr;
+    gap: 10px;
+    background-color: #FFCCCB;
+}
+
+.grid-item {
+    background-color: #FFCCCB;
+}
+.grid-item2 {
+    background-color: #FF7377;
+    border: black 2px;
+    border-left-style: inset;
+}
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.flex-item {
+    flex: 1;
+}
+.flex-item1 { 
+background-color: #8AAAE5;
+flex: 100%;
+border-left: black inset;
+}
+.flex-item2 {
+background-color: red;
+border-left: black inset;
+border-bottom: black inset 3px;
+border-top: white solid 3px;
+}
+.flex-item3 {
+background-color: blue;
+border-bottom: black inset 3px;
+border-top: white solid 3px;
 }
 
 
 
 
 
-
-
-
-
+.container {
+    width: 100%;
+    height: 300px;
+    margin: 20px;
+}
+@media screen and (min-width: 480px) {
+    body {
+     margin-left: 40px;
+     margin-right: 40px;
+    }
+    .avatar {
+       margin-left: 0; 
+    }
+  }
