--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,3 +1,4 @@
+/* universal selector */
 * {
 background-color: white;
 color: black;
@@ -5,11 +6,8 @@ background-color: #FFCCCB;
 font-family: sans-serif; 
 }
 
+                                /* Header Navbar */
 
-h1 {
-    font-size: 40px;
-    font-weight: 900;
-}
 .navflex {
     display: flex;
     flex-wrap: wrap;
@@ -20,9 +18,11 @@ display: flex;
 align-items: center;
 justify-content: space-between;
 border: 3px black solid;
+border-left: black solid 4px;
+border-top: none;
+border-right: none;
 box-shadow: black 2px 2px 20px;
 }
-
 
 nav, .nav-bar, .title, .text-right, a, li {
     background-color: #FF8BA0;
@@ -38,6 +38,7 @@ overflow: hidden;
 display: grid;
 grid-template-columns: 1fr 1fr 1fr;
 }
+
 .text-right a {
     float: left;
     color: black;
@@ -46,11 +47,11 @@ grid-template-columns: 1fr 1fr 1fr;
     text-decoration: none;
     font-size: 17px;
 }
+
 .text-right a:hover {
-    background-color: palevioletred;
+    background-color: #28282B;
     color: white;
 }
-
 
 nav ul li a {
    margin: 0 40px 10px 30px;
@@ -67,27 +68,33 @@ nav ul li a {
     text-shadow: 2px 2px 2px;
 }
 
+
+/* avatar img */
 .avatar {
     display: flex;
     flex-wrap: wrap;
-    flex-basis: 70px;
-    margin-right: 30px;
-    margin-left: 40px;
+    flex-grow: 2 1 70px;
+    margin-left: 100px;
     margin-top: 150px;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
     box-shadow: 2px 2px 3px 2px;
     color: black;
-    background-color: white;
+    background-color: #FFCCCB;
 }
 
+
+                                /* Main section */
+
+
+/* grid layout */
 .grid-container {
-    max-width: 1300px;
+    max-width: 900px;
     height: 950px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 1fr 2fr;
-    gap: 10px;
+    row-gap: 70px;
     background-color: #FFCCCB;
 }
 
@@ -95,10 +102,12 @@ nav ul li a {
     background-color: #FFCCCB;
 }
 .grid-item2 {
-    background-color: #FF7377;
-    border: black 2px;
-    border-left-style: inset;
+    background-color: #FFA8B5;
+    border-left: black solid 2px;
+    border-top: black solid 2px;
 }
+
+/* flex container inside grid item-4 */
 .flex-container {
     display: flex;
     flex-wrap: wrap;
@@ -107,37 +116,143 @@ nav ul li a {
     flex: 1;
 }
 .flex-item1 { 
-background-color: #8AAAE5;
+background-color: #FFCCCB;
 flex: 100%;
-border-left: black inset;
+border-left: black solid 2px;
+border-top: black solid 2px;
 }
 .flex-item2 {
-background-color: red;
-border-left: black inset;
-border-bottom: black inset 3px;
-border-top: white solid 3px;
+background-color: #FFCCCB;
+border-left: black solid 2px;
+border-top: palevioletred solid 2px;
+border-right: palevioletred solid 2px;
+border-bottom: palevioletred solid 2px;
 }
 .flex-item3 {
-background-color: blue;
-border-bottom: black inset 3px;
-border-top: white solid 3px;
+background-color: #FFCCCB;
+border-top: palevioletred solid 2px;
+border-bottom: palevioletred solid 2px;
+}
+
+/* horiseon image */
+.horiseon {
+    height: 400px;
+    width: 700px;
+}
+figure {
+    margin-left: 45%;
 }
 
 
-
-
-
-.container {
-    width: 100%;
-    height: 300px;
-    margin: 20px;
+                                    /* Footer */
+/* contact info */
+.Contact-flex {
+    display: flex;
+    max-width: 2000px;
+    justify-content: right;
+    margin-left: 500px;
+    margin-top: 50px;
+    background-color: #FFCCCB;
+ 
 }
+.ContactMe {
+ flex: 1;
+ flex-basis: 50px;
+ height: 100px;
+ background-color: #FFCCCB;
+ margin-bottom: 5px;
+ 
+}
+.ContactMe1, .ContactMe2, .ContactMe3, .ContactMe4{
+    width: 100px;
+    margin: 10px;
+    justify-content: space-around;
+}
+.ContactMe1 {
+    font-size: 20px;
+    margin-right: 40px;
+}
+.ContactMe2 a,.ContactMe4 a, .ContactMe3 a {
+    background-color: #FFCCCB;
+    color: #FFA8B5;
+    text-decoration: none;
+}
+#para a {
+    background-color: #FFCCCB;
+} 
+#para {
+    box-shadow: 2px 2px 2px;
+}
+
+.p-color {
+   
+    background-color: none;
+    background-color: #FFCCCB;
+}
+.where {
+    font-size: 30px;
+    background-color: #FFCCCB;
+    margin-right: 10px;
+}
+
+
+/* Any Other Elements  */
+h1 {
+    font-size: 40px;
+    font-weight: 900;
+}
+H2 {
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+font-size: 40px;
+font-weight: 200;
+box-shadow: 2px 3px 3px 4px palevioletred;
+text-shadow: 3px 3px 4px;
+margin: 0 auto;
+}
+p {
+    background-color: #FFA8B5;
+    color: white;
+}
+h2, p {
+margin-left: 80px;
+margin-top: 100px;
+}
+
+hr {
+    border: 1px solid black;
+max-width: 1000px;
+margin-bottom: 60px;
+}
+
+
+/* media queery */
 @media screen and (min-width: 480px) {
-    body {
+    main {
      margin-left: 40px;
      margin-right: 40px;
     }
     .avatar {
-       margin-left: 0; 
+       margin-left: -150px; 
+       max-width: 400px;
     }
-  }
+    h2 {
+        margin-right: 10px;
+        margin-left: 0;
+    }
+    p {
+      margin: 0 auto;
+      margin-top: 50px;
+      margin-left: 10px;
+      line-height: 25px;
+    }
+    .grid-item2, .grid-item4 {
+    min-width: 200px;
+    margin-left: 20px;
+}
+body {
+    height: 2000px;
+}
+.ContactMe {
+    margin-top: 230px;
+}
+}
